# gw_project

./: .gitignore  README.md  app.py  config.py  model.py  train.py  train_gpt.ipynb
rust_tok/: Cargo.toml  pyproject.toml
rust_tok/src/: lib.rs  main.rs
